mods/ui.css
.ytaf-ui-container {
  position: absolute;
  top: 10%;
  left: 10%;
  right: 10%;
  bottom: 10%;

  background: rgba(0, 0, 0, 0.8);
  color: white;
  border-radius: 20px;
  padding: 20px;
  font-size: 1.5rem;
  z-index: 1000;
}

.ytaf-ui-container :focus {
  outline: 4px red solid;
}

.ytaf-ui-container h1 {
  margin: 0;
  margin-bottom: 0.5em;
  text-align: center;
}

.ytaf-ui-container input[type='checkbox'] {
  width: 1.4rem;
  height: 1.4rem;
}

.ytaf-ui-container input[type='radio'] {
  width: 1.4rem;
  height: 1.4rem;
}

.ytaf-ui-container label {
  display: block;
  font-size: 1.4rem;
}

.ytaf-notification-container {
  position: absolute;
  right: 10px;
  bottom: 10px;
  font-size: 16pt;
  z-index: 1200;
}

.ytaf-notification-container .message {
  background: rgba(0, 0, 0, 0.7);
  color: white;
  padding: 1em;
  margin: 0.5em;
  transition: all 0.3s ease-in-out;
  opacity: 1;
  line-height: 1;
  border-right: 10px solid rgba(50, 255, 50, 0.3);
  display: inline-block;
  float: right;
}

.ytaf-notification-container .message-hidden {
  opacity: 0;
  margin: 0 0.5em;
  padding: 0 1em;
  line-height: 0;
}

/* Fixes transparency effect for the video player */

.ytLrWatchDefaultShadow {
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 90%) !important;
  background-color: rgba(0, 0, 0, 0.3) !important;
  display: block !important;
  height: 100% !important;
  pointer-events: none !important;
  position: absolute !important;
  width: 100% !important;
}

/* Fixes shorts having a black background */

.ytLrTileHeaderRendererShorts {
  background-image: none !important;
}

/* Multiline support for strings in the UI */

.ytLrOverlayPanelHeaderRendererSubtitle {
  white-space: pre-wrap !important;
}

